refactor: Weight uses Comparator.comparingInt(...).reversed()
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01CkssUJRFbqmobf33mvtTeH