@@ -6,18 +6,14 @@ import org.springframework.stereotype.Component;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 @Component
 @Order(1)
 public class Weight implements PolicyState{
     @Override
     public List<Advertisement> transmit(List<Advertisement> advertisements, long userId, int total) {
-        return advertisements.stream().sorted(new Comparator<Advertisement>() {
-                    @Override
-                    public int compare(Advertisement o1, Advertisement o2) {
-                        return o2.getWeight()-o1.getWeight();
-                    }
-                }).limit(total)
-                .collect(Collectors.toList());
+        return advertisements.stream()
+                .sorted(Comparator.comparingInt(Advertisement::getWeight).reversed())
+                .limit(total)
+                .toList();
     }
 }
